# bayes-filters-lib

src/BayesFilters/include/BayesFilters/: LinearModel.h  NonLinearScalarModel.h
src/BayesFilters/src/: LinearModel.cpp  NonLinearScalarModel.cpp
test/: CMakeLists.txt  plot.py
test/test_SIS_nonlinear/: main.cpp
test/test_UKF_nonlinear/: CMakeLists.txt  main.cpp
test/test_UKF_opencv/: CMakeLists.txt  main.cpp
test/test_ceres/: CMakeLists.txt  main.cpp
